fix: refactor status list publishing to use event-driven approach for registry updates