@@ -7,6 +7,7 @@ import ch.admin.bj.swiyu.issuer.service.statusregistry.StatusRegistryClient;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
+import org.springframework.context.ApplicationEventPublisher;
 
 import java.util.List;
 import java.util.Map;
@@ -14,10 +15,7 @@ import java.util.Set;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.anyList;
+import static org.mockito.Mockito.*;
 
 /**
  * Unit tests for {@link StatusListPersistenceService}.
@@ -30,10 +28,6 @@ class StatusListPersistenceServiceTest {
 
     private StatusListPersistenceService persistenceService;
     private StatusListRepository statusListRepository;
-    private StatusListSigningService signingService;
-    private StatusRegistryClient statusRegistryClient;
-    private ApplicationProperties applicationProperties;
-    private StatusListProperties statusListProperties;
 
     /**
      * Sets up the test environment by mocking all dependencies and configuring
@@ -42,18 +36,20 @@ class StatusListPersistenceServiceTest {
     @BeforeEach
     void setUp() {
         statusListRepository = mock(StatusListRepository.class);
-        signingService = mock(StatusListSigningService.class);
-        statusRegistryClient = mock(StatusRegistryClient.class);
-        applicationProperties = mock(ApplicationProperties.class);
-        statusListProperties = mock(StatusListProperties.class);
+        StatusListSigningService signingService = mock(StatusListSigningService.class);
+        StatusRegistryClient statusRegistryClient = mock(StatusRegistryClient.class);
+        ApplicationProperties applicationProperties = mock(ApplicationProperties.class);
+        StatusListProperties statusListProperties = mock(StatusListProperties.class);
+        ApplicationEventPublisher eventPublisher = mock(ApplicationEventPublisher.class);
         when(statusListProperties.getStatusListSizeLimit()).thenReturn(100 * 1024 * 1024); // 100 MB
         when(applicationProperties.isAutomaticStatusListSynchronizationDisabled()).thenReturn(true); // Disable registry sync in tests
         persistenceService = new StatusListPersistenceService(
-            applicationProperties,
-            statusListProperties,
-            statusListRepository,
-            statusRegistryClient,
-            signingService
+                applicationProperties,
+                statusListProperties,
+                statusListRepository,
+                statusRegistryClient,
+                signingService,
+                eventPublisher
         );
     }
 
@@ -66,13 +62,13 @@ class StatusListPersistenceServiceTest {
         var token = new TokenStatusListToken(8, 10);
         token.setStatus(1, TokenStatusListBit.REVOKE.getValue());
         StatusList statusList = StatusList.builder()
-            .id(statusListId)
-            .uri("https://example.com/" + statusListId)
-            .config(Map.of("bits", 8))
-            .statusZipped(token.getStatusListData())
-            .maxLength(10)
-            .configurationOverride(null)
-            .build();
+                .id(statusListId)
+                .uri("https://example.com/" + statusListId)
+                .config(Map.of("bits", 8))
+                .statusZipped(token.getStatusListData())
+                .maxLength(10)
+                .configurationOverride(null)
+                .build();
         when(statusListRepository.findAllByIdInForUpdate(List.of(statusListId))).thenReturn(List.of(statusList));
 
         CredentialOfferStatus offerStatus = Mockito.mock(CredentialOfferStatus.class);
@@ -83,7 +79,7 @@ class StatusListPersistenceServiceTest {
 
         List<UUID> result = persistenceService.revoke(Set.of(offerStatus));
         assertEquals(1, result.size());
-        assertEquals(statusListId, result.get(0));
+        assertEquals(statusListId, result.getFirst());
         verify(statusListRepository).saveAll(anyList());
     }
 
@@ -96,13 +92,13 @@ class StatusListPersistenceServiceTest {
         TokenStatusListToken token = new TokenStatusListToken(8, 10);
         token.setStatus(2, TokenStatusListBit.SUSPEND.getValue());
         StatusList statusList = StatusList.builder()
-            .id(statusListId)
-            .uri("https://example.com/" + statusListId)
-            .config(Map.of("bits", 8))
-            .statusZipped(token.getStatusListData())
-            .maxLength(10)
-            .configurationOverride(null)
-            .build();
+                .id(statusListId)
+                .uri("https://example.com/" + statusListId)
+                .config(Map.of("bits", 8))
+                .statusZipped(token.getStatusListData())
+                .maxLength(10)
+                .configurationOverride(null)
+                .build();
         when(statusListRepository.findAllByIdInForUpdate(List.of(statusListId))).thenReturn(List.of(statusList));
 
         CredentialOfferStatus offerStatus = Mockito.mock(CredentialOfferStatus.class);
@@ -113,7 +109,7 @@ class StatusListPersistenceServiceTest {
 
         List<UUID> result = persistenceService.suspend(Set.of(offerStatus));
         assertEquals(1, result.size());
-        assertEquals(statusListId, result.get(0));
+        assertEquals(statusListId, result.getFirst());
         verify(statusListRepository).saveAll(anyList());
     }
 
@@ -126,13 +122,13 @@ class StatusListPersistenceServiceTest {
         TokenStatusListToken token = new TokenStatusListToken(8, 10);
         token.setStatus(3, TokenStatusListBit.VALID.getValue());
         StatusList statusList = StatusList.builder()
-            .id(statusListId)
-            .uri("https://example.com/" + statusListId)
-            .config(Map.of("bits", 8))
-            .statusZipped(token.getStatusListData())
-            .maxLength(10)
-            .configurationOverride(null)
-            .build();
+                .id(statusListId)
+                .uri("https://example.com/" + statusListId)
+                .config(Map.of("bits", 8))
+                .statusZipped(token.getStatusListData())
+                .maxLength(10)
+                .configurationOverride(null)
+                .build();
         when(statusListRepository.findAllByIdInForUpdate(List.of(statusListId))).thenReturn(List.of(statusList));
 
         CredentialOfferStatus offerStatus = Mockito.mock(CredentialOfferStatus.class);
@@ -143,7 +139,7 @@ class StatusListPersistenceServiceTest {
 
         List<UUID> result = persistenceService.revalidate(Set.of(offerStatus));
         assertEquals(1, result.size());
-        assertEquals(statusListId, result.get(0));
+        assertEquals(statusListId, result.getFirst());
         verify(statusListRepository).saveAll(anyList());
     }
 }
